--- a/templates/pages/authentication/auth-lock-screen.html
+++ b/templates/pages/authentication/auth-lock-screen.html
@@ -6,9 +6,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Lock Screen | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
+    <title>Lock Screen | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -79,7 +79,7 @@
                                             <p>Not you ? return <a href="{% url 'auth-login' %}"
                                                     class="fw-medium text-primary"> Log in </a> </p>
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> EPIDEMIOLOGOS CONSULTORES S.A.S
+                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
                                             </p>
                                         </div>
                                     </div>
