--- a/templates/pages/authentication/auth-logout-done.html
+++ b/templates/pages/authentication/auth-logout-done.html
@@ -5,9 +5,9 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Logout | Dashboard EPIDEMIOLOGOS CONSULTORES S.A.S</title>
+    <title>Logout | Dashboard Multilab Agroanalítica CONSULTORES S.A.S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Dashboard para EPIDEMIOLOGOS CONSULTORES S.A.S desarrollado por BIOS" name="description" />
+    <meta content="Dashboard para Multilab Agroanalítica CONSULTORES S.A.S desarrollado por BIOS" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
@@ -65,7 +65,7 @@
 
                                         <div class="mt-5 text-center">
                                             <p>©
-                                                <script>document.write(new Date().getFullYear())</script> EPIDEMIOLOGOS CONSULTORES S.A.S
+                                                <script>document.write(new Date().getFullYear())</script> Multilab Agroanalítica CONSULTORES S.A.S
                                             </p>
                                         </div>
                                     </div>
